Fix the issue with overlapped recaptcha

--- a/src/app/login/pages/signup-page/signup-page.component.scss
+++ b/src/app/login/pages/signup-page/signup-page.component.scss
@@ -65,6 +65,7 @@
   }
 
   .girl-with-heart-desktop-image {
+    pointer-events: none; // is needed to not overlap recaptcha
     position: absolute;
     bottom: -14%;
     right: 68%;
